tests/base/invalid/Return_CompileFail_7.whiley
import whiley.lang.*:*

int f(bool x, int y, int z):
    return x || y <= z+1
